--- a/01-Config/src/main/resources/application.properties
+++ b/01-Config/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 server.port=8081
 spring.application.name=config
 
-spring.cloud.config.server.git.uri=file://${user.home}/application-config/SpringCloud
+spring.cloud.config.server.git.uri=file://${user.home}/git/SpringCloud
+spring.cloud.config.server.git.search-paths=configFiles/
+#spring.cloud.config.server.git.search-paths={application}/{profile}
+
 
 spring.cloud.config.server.git.default-label=main
