--- a/01-Config/src/main/resources/application.properties
+++ b/01-Config/src/main/resources/application.properties
@@ -4,6 +4,8 @@ spring.application.name=config
 spring.cloud.config.server.git.uri=file://${user.home}/git/SpringCloud
 spring.cloud.config.server.git.search-paths=configFiles/
 #spring.cloud.config.server.git.search-paths={application}/{profile}
-
-
+#spring.cloud.config.server.native.search-locations=file://${user.home}/git/SpringCloud
 spring.cloud.config.server.git.default-label=main
+
+spring.cloud.config.allowOverride= false
+spring.cloud.config.overrideNone= false
