--- a/07-MicroRest4/pom.xml
+++ b/07-MicroRest4/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>ran.can.adr.micro.rest</groupId>
-	<artifactId>04-MicroRest</artifactId>
+	<artifactId>07-MicroRest4</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>04-MicroRest</name>
+	<name>07-MicroRest4</name>
 	<description>Gateway  project</description>
 	<properties>
 		<java.version>11</java.version>
@@ -50,6 +50,8 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-sleuth</artifactId>
 		</dependency>
+		
+		
 		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
