--- a/01-Config/src/main/resources/application.properties
+++ b/01-Config/src/main/resources/application.properties
@@ -10,3 +10,16 @@ spring.cloud.config.server.git.default-label=main
 
 spring.cloud.config.allowOverride= false
 spring.cloud.config.overrideNone= false
+
+
+spring.boot.admin.client.url=http://localhost:8080
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+
+
+spring.boot.admin.client.username=admin
+spring.boot.admin.client.password=admin
+spring.security.user.name=client
+spring.security.user.password=client
+spring.boot.admin.client.instance.metadata.user.name=${spring.security.user.name}
+spring.boot.admin.client.instance.metadata.user.password=${spring.security.user.password}
