--- a/06-MicroRest3/pom.xml
+++ b/06-MicroRest3/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.5.3-SNAPSHOT</version>
+		<version>2.4.8</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>ran.can.adr.micro.rest</groupId>
@@ -13,9 +13,10 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>06-MicroRest3</name>
 	<description>Gateway  project</description>
-	<properties>
+<properties>
 		<java.version>11</java.version>
 		<spring-cloud.version>2020.0.4-SNAPSHOT</spring-cloud.version>
+		<spring-boot-admin.version>2.3.1</spring-boot-admin.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -56,6 +57,10 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>de.codecentric</groupId>
+			<artifactId>spring-boot-admin-starter-client</artifactId>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
@@ -63,6 +68,13 @@
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-dependencies</artifactId>
 				<version>${spring-cloud.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+			<dependency>
+				<groupId>de.codecentric</groupId>
+				<artifactId>spring-boot-admin-dependencies</artifactId>
+				<version>${spring-boot-admin.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
