--- a/configFiles/micro2.yml
+++ b/configFiles/micro2.yml
@@ -1,7 +1,36 @@
 server:
    port: 0
-   
-
+          
 spring:
+   cloud:
+      config:
+         uri: http://localhost:8081
    application:
       name: micro2
+   zipkin:
+     enabled: false
+   boot: 
+    admin:
+      client:
+        url: http://localhost:8080
+        instance:
+          metadata:
+            user:
+              name: ${spring.security.user.name}
+              password: ${spring.security.user.password}
+        password: admin
+        username: admin
+
+eureka: 
+  client:
+     serviceUrl:
+        defaultZone: http://localhost:8082/eureka/
+        
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  endpoint:
+   health:
+     show-details: always
