--- a/03-MicroRest/src/main/resources/bootstrap.yml
+++ b/03-MicroRest/src/main/resources/bootstrap.yml
@@ -5,4 +5,8 @@ spring:
          uri: http://localhost:8081
    application:
       name: micro1
-   
+  
+  
+eureka:
+  instance:
+    instance-id: ${random.value}:${spring.application.name}
